--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,25 +1,3 @@
-.box {
-    width:200px;
-    height:200px;
-    background-color: #3f51b5;
-    border-radius: 50%;
+button {
+  margin: 20px;
 }
-
-.box3 {
-    width:200px;
-    height:200px;
-    background-color: #3f51b5;
-    color:  #3f51b5;
-    border:10px solid white;
-    border-radius: 50%;
-}
-
-.box5 {
-    width:200px;
-    height:200px;
-    background-color: #3f51b5;
-    color:  #FFF;
-    border:10px solid white;
-    border-radius: 50%;
-}
-
